Fix bold fonts on safari
Also fix various warnings

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -164,6 +164,7 @@
 }
 
 $accent-color: #40A1DD;
+$bold-weight: 200;
 
 body {
     background-color: #1E181B;
@@ -231,7 +232,7 @@ p {
         font-family: 'Circular-Bold';
         font-size: 48px;
         font-style: normal;
-        font-weight: 700;
+        font-weight: $bold-weight;
         margin: 20px 0 30px 0;
         line-height: 55px; /* 100% */
 
@@ -517,7 +518,7 @@ p {
 
     strong {
         font-family: 'Circular-Bold', sans-serif;
-        font-weight: 700;
+        font-weight: $bold-weight;
     }
 
     h3 {
@@ -534,7 +535,7 @@ p {
     position: relative;
 
     h3 {
-        font-size: 16px;
+        font-size: 19px;
         transform: scale(0);
         opacity: 0;
         animation-name: fadeInBounce;
@@ -542,6 +543,7 @@ p {
         animation-delay: .6s;
         animation-fill-mode: forwards;
         animation-timing-function: ease-out;
+        font-weight: $bold-weight;
     }
 
     a {
@@ -758,7 +760,7 @@ p {
         font-family: 'Circular-Bold';
         font-size: 48px;
         font-style: normal;
-        font-weight: 700;
+        font-weight: $bold-weight;
         line-height: 48px; /* 100% */
         letter-spacing: -0.96px;
         margin-top: 0;
@@ -766,7 +768,7 @@ p {
 
     strong {
         font-family: 'Circular-Bold';
-        font-weight: 700;
+        font-weight: $bold-weight;
     }
 
     .sticky {position: sticky; top: 20%;}
@@ -775,7 +777,7 @@ p {
 .passion, .alive {
     h3 {
         font-family: 'Circular-Bold';
-        font-weight: 700;
+        font-weight: $bold-weight;
         margin: 50px 0 25px;
         text-align: center;
     }
@@ -814,7 +816,7 @@ p {
         font-family: 'Circular-Bold';
         font-size: 48px;
         font-style: normal;
-        font-weight: 700;
+        font-weight: $bold-weight;
         line-height: 48px; /* 100% */
         letter-spacing: -0.96px;
     }
@@ -1636,7 +1638,7 @@ p {
         font-family: 'Circular-Bold';
         font-size: 48px;
         font-style: normal;
-        font-weight: 700;
+        font-weight: $bold-weight;
         line-height: 48px; /* 100% */
         letter-spacing: -0.96px;
     }
@@ -1676,7 +1678,7 @@ p {
         font-family: 'Circular-Bold';
         font-size: 48px;
         font-style: normal;
-        font-weight: 700;
+        font-weight: $bold-weight;
         line-height: 54px; /* 100% */
         letter-spacing: -0.96px;
     }
@@ -1856,7 +1858,7 @@ p {
         font-family: "Circular-Bold";
         font-size: 24px;
         font-style: normal;
-        font-weight: 700;
+        font-weight: $bold-weight;
         line-height: normal;
         width: 250px;
         transform: scale(0);
@@ -1902,7 +1904,7 @@ p {
         font-family: 'Circular-Bold';
         font-size: 18px;
         font-style: normal;
-        font-weight: 700;
+        font-weight: $bold-weight;
         line-height: normal;
         margin: 10px;
         width: 189px;
@@ -1929,7 +1931,7 @@ p {
         font-family: "Circular-Bold";
         font-size: 18px;
         font-style: normal;
-        font-weight: 700;
+        font-weight: $bold-weight;
         line-height: normal;
         opacity: 0.6;
         text-align: center;
@@ -1989,7 +1991,7 @@ p {
         font-family: "Circular-Bold";
         font-size: 16px;
         font-style: normal;
-        font-weight: 700;
+        font-weight: $bold-weight;
         line-height: normal;
         margin: 0;
         text-wrap: balance;
@@ -2000,7 +2002,7 @@ p {
         color: #FFF;
         font-family: "Circular-Book";
         font-size: 14px;
-        font-weight: 200;
+        font-weight: $bold-weight;
         line-height: normal;
         opacity: 0.75;
         text-wrap: balance;
@@ -2068,7 +2070,7 @@ p {
     font-family: 'Circular-Bold';
     font-size: 48px;
     font-style: normal;
-    font-weight: 700;
+    font-weight: $bold-weight;
     line-height: 54px; /* 100% */
     width: 100%;
 }
@@ -2096,7 +2098,7 @@ p {
         display: inline-block;
         font-family: 'Circular-Bold', sans-serif;
         font-size: 24px;
-        font-weight: 700;
+        font-weight: $bold-weight;
         padding-top: 0;
         height: 90px;
         justify-content: center;
@@ -2613,7 +2615,7 @@ p {
         font-family: 'Circular-Bold', sans-serif;
         font-size: 64px;
         line-height: 64px;
-        font-weight: 700;
+        font-weight: $bold-weight;
     }
 
     p {
@@ -2883,7 +2885,7 @@ footer {
         font-family: "Circular-Bold";
         font-size: 64px;
         font-style: normal;
-        font-weight: 700;
+        font-weight: $bold-weight;
         line-height: 72px; /* 112.5% */
         margin: 100px 0 25px;
     }
@@ -2892,7 +2894,7 @@ footer {
         font-family: "Circular-Bold";
         font-size: 36px;
         font-style: normal;
-        font-weight: 700;
+        font-weight: $bold-weight;
         margin-top: 75px;
     }
 
@@ -2900,7 +2902,7 @@ footer {
         color: #5CCF6F;
         font-family: "Circular-Bold";
         font-style: normal;
-        font-weight: 700;
+        font-weight: $bold-weight;
         letter-spacing: 0.5px;
     }
 
@@ -2944,7 +2946,7 @@ footer {
     color: white;
     margin-left: 3px;
     padding: 0 5px;
-    font-weight: 700;
+    font-weight: $bold-weight;
     letter-spacing: 0.5px;
 }
 
@@ -2984,9 +2986,9 @@ footer {
     border-radius: 50px;
     box-shadow: rgba(0, 0, 0, 0.15) 0px 8px 15px 0px;
     color: rgb(255, 255, 255);
-    font-family: Circular-Bold, sans-serif;
+    font-family: "Circular-Bold", sans-serif;
     font-size: 24px;
-    font-weight: 700;
+    font-weight: $bold-weight;
     margin: 10px;
     padding: 10px 40px;
     cursor: pointer;
@@ -3116,7 +3118,7 @@ footer {
       display: block;
     }
 
-    .ecosystemContainer {    
+    .ecosystemContainer {
         p {
             width: 75%;
         }
@@ -3142,7 +3144,7 @@ footer {
         left: -25%;
     }
 
-    .bioregional { 
+    .bioregional {
         h1 {
             font-size: 100px;
         }
@@ -3236,20 +3238,20 @@ footer {
         .toolsList1 {
             width: 100%;
         }
-    
+
         .toolsList2 {
             width: 100%;
         }
     }
 
     .bioregional {
-    
+
         h1 {
             font-size: 64px;
             line-height: 70px;
             margin: 0 0 25px;
         }
-    
+
         h2 {
             font-size: 36px;
         }
@@ -3257,7 +3259,7 @@ footer {
 
     .bioregionalDetails {
         flex-wrap: wrap;
-    
+
         .bioregionalDetail {
             display: flex;
             margin: 10px;
@@ -3284,11 +3286,11 @@ footer {
     }
 
     .contentContainer {
-    
+
         h2 {
             font-size: 48px;
             font-style: normal;
-            font-weight: 700;
+            font-weight: $bold-weight;
             line-height: 52px; /* 112.5% */
             margin: 50px 0 25px;
         }
@@ -3296,7 +3298,7 @@ footer {
         li {
             font-size: 16px;
         }
-    }    
+    }
 
     .footerAcknowledgement {
         width: 90%;
